@@ -77,18 +77,20 @@ class OrderControllerTest {
                 new OrderItemResponse(1L, "PROD-1", 2, new BigDecimal("10.99"), new BigDecimal("21.98")),
                 new OrderItemResponse(2L, "PROD-2", 1, new BigDecimal("20.99"), new BigDecimal("20.99")));
 
-        orderResponseList = List.of(
-                new OrderResponse(1L, 1L, "NEW", "", address, LocalDateTime.now(), new BigDecimal("42.97"), orderItems),
-                new OrderResponse(
-                        2L,
-                        1L,
-                        "DELIVERED",
-                        "",
-                        address,
-                        LocalDateTime.now().minusDays(1),
-                        new BigDecimal("30.99"),
-                        List.of(new OrderItemResponse(
-                                3L, "PROD-3", 1, new BigDecimal("30.99"), new BigDecimal("30.99")))));
+        // Create OrderResponse instances using the constructor
+        OrderResponse order1 =
+                new OrderResponse(1L, 1L, "NEW", "", address, LocalDateTime.now(), new BigDecimal("42.97"), orderItems);
+        OrderResponse order2 = new OrderResponse(
+                2L,
+                1L,
+                "DELIVERED",
+                "",
+                address,
+                LocalDateTime.now().minusDays(1),
+                new BigDecimal("30.99"),
+                List.of(new OrderItemResponse(3L, "PROD-3", 1, new BigDecimal("30.99"), new BigDecimal("30.99"))));
+
+        orderResponseList = List.of(order1, order2);
 
         pagedResult = new PagedResult<>(
                 orderResponseList,
@@ -102,7 +104,8 @@ class OrderControllerTest {
                 );
 
         // Set up customer response
-        customerResponse = new CustomerResponse(1L, "Test User", "test@example.com", "1234567890", "123 Test St", 5000);
+        customerResponse = new CustomerResponse(
+                1L, "Test User", "test@example.com", "1234567890", "123 Test St,Test City,TS 12345", 5000);
 
         // Set up order confirmation
         orderConfirmation = new OrderConfirmationDTO(123L, 1L, "NEW");
@@ -110,21 +113,24 @@ class OrderControllerTest {
         // Mock security helper
         when(securityHelper.getAccessToken()).thenReturn("test-token");
         when(securityHelper.getLoggedInUserEmail()).thenReturn("test@example.com");
+
+        // Mock static SecurityHelper.getUsername()
+        when(securityHelper.getUsername()).thenReturn("test-username");
+
+        // Mock customer service client for cart
+        when(customerServiceClient.getCustomerByName(anyString())).thenReturn(customerResponse);
+        when(customerServiceClient.getCustomerById(any(Long.class))).thenReturn(customerResponse); // Added this line
     }
 
     @Test
     @WithMockUser
     void cart_shouldRenderCartPageAndProcessTemplateWithoutErrors() throws Exception {
+        // Given
         // Use MockMvc to render the template and check for successful processing
         mockMvc.perform(get("/cart").with(csrf()))
                 .andExpect(status().isOk())
                 .andExpect(view().name("cart"))
-                .andExpect(result -> {
-                    // If we get here without exceptions, template processing was successful
-                    String contentAsString = result.getResponse().getContentAsString();
-                    // Check for expected content to ensure template was actually rendered
-                    assert (contentAsString.contains("Your cart"));
-                });
+                .andExpect(model().attributeExists("customer"));
     }
 
     @Test
@@ -142,7 +148,9 @@ class OrderControllerTest {
     @WithMockUser
     void getOrder_shouldReturnOrderDetails() throws Exception {
         String orderNumber = "ORDER-123";
-        OrderResponse orderResponse = orderResponseList.get(0);
+        OrderResponse orderResponse = orderResponseList.getFirst();
+        // Manually set the customer for the test case
+        orderResponse.setCustomer(customerResponse);
 
         when(orderServiceClient.getOrder(anyMap(), anyString())).thenReturn(orderResponse);
 
@@ -153,7 +161,9 @@ class OrderControllerTest {
                 .andExpect(jsonPath("$.status", is("NEW")))
                 .andExpect(jsonPath("$.items", hasSize(2)))
                 .andExpect(jsonPath("$.items[0].productId", is("PROD-1")))
-                .andExpect(jsonPath("$.items[0].quantity", is(2)));
+                .andExpect(jsonPath("$.items[0].quantity", is(2)))
+                .andExpect(jsonPath("$.customer.name", is("Test User"))) // Added assertion for customer name
+                .andExpect(jsonPath("$.customer.email", is("test@example.com"))); // Added assertion for customer email
     }
 
     @Test
@@ -184,7 +194,7 @@ class OrderControllerTest {
     void createOrder_shouldCreateAndReturnOrderConfirmation() throws Exception {
         // Create test request objects
         CustomerRequest customerRequest =
-                new CustomerRequest("Test User", "original@example.com", "1234567890", "Test Address", 5000);
+                new CustomerRequest("Test User", "test@example.com", "1234567890", "Test Address", 5000);
 
         List<OrderItemRequest> items = List.of(
                 new OrderItemRequest("PROD-1", 2, new BigDecimal("10.99")),
@@ -195,8 +205,7 @@ class OrderControllerTest {
         CreateOrderRequest createOrderRequest = new CreateOrderRequest(items, customerRequest, address);
 
         // Mock client responses
-        when(customerServiceClient.getOrCreateCustomer(any(CustomerRequest.class)))
-                .thenReturn(customerResponse);
+        when(customerServiceClient.getCustomerByName(anyString())).thenReturn(customerResponse);
         when(orderServiceClient.createOrder(anyMap(), any(OrderRequestExternal.class)))
                 .thenReturn(orderConfirmation);
 
@@ -214,20 +223,19 @@ class OrderControllerTest {
     @Test
     @WithMockUser
     void getOrder_shouldHandleErrorWhenServiceFails() throws Exception {
-        String orderNumber = "ORDER-123";
-
+        String orderNumber = "ORDER-FAIL";
         when(orderServiceClient.getOrder(anyMap(), anyString()))
-                .thenThrow(new HttpClientErrorException(HttpStatus.NOT_FOUND));
+                .thenThrow(new HttpClientErrorException(HttpStatus.INTERNAL_SERVER_ERROR, "Service unavailable"));
 
         mockMvc.perform(get("/api/orders/{orderNumber}", orderNumber).with(csrf()))
-                .andExpect(status().isNotFound());
+                .andExpect(status().isInternalServerError());
     }
 
     @Test
     @WithMockUser
     void getOrders_shouldHandleErrorWhenServiceFails() throws Exception {
         when(orderServiceClient.getOrders(anyMap()))
-                .thenThrow(new HttpClientErrorException(HttpStatus.INTERNAL_SERVER_ERROR));
+                .thenThrow(new HttpClientErrorException(HttpStatus.INTERNAL_SERVER_ERROR, "Service unavailable"));
 
         mockMvc.perform(get("/api/orders").with(csrf())).andExpect(status().isInternalServerError());
     }
@@ -235,21 +243,19 @@ class OrderControllerTest {
     @Test
     @WithMockUser
     void createOrder_shouldHandleErrorWhenCustomerServiceFails() throws Exception {
-        // Create test request objects
         CustomerRequest customerRequest =
-                new CustomerRequest("Test User", "original@example.com", "1234567890", "Test Address", 5000);
-        List<OrderItemRequest> items = List.of(new OrderItemRequest("PROD-1", 2, new BigDecimal("10.99")));
-        Address address = new Address("123 Test St", "Apt 4", "Test City", "Test State", "12345", "Test Country");
+                new CustomerRequest("Test User", "fail@example.com", "1234567890", "Test Address", 5000);
+        List<OrderItemRequest> items = List.of(new OrderItemRequest("PROD-FAIL", 1, new BigDecimal("99.99")));
+        Address address = new Address("Fail St", "Apt 0", "Fail City", "Fail State", "00000", "Fail Country");
         CreateOrderRequest createOrderRequest = new CreateOrderRequest(items, customerRequest, address);
 
-        // Mock client responses for failure
-        when(customerServiceClient.getOrCreateCustomer(any(CustomerRequest.class)))
-                .thenThrow(new HttpClientErrorException(HttpStatus.BAD_REQUEST));
+        when(customerServiceClient.getCustomerByName(anyString()))
+                .thenThrow(new HttpClientErrorException(HttpStatus.NOT_FOUND, "Customer not found"));
 
         mockMvc.perform(post("/api/orders")
                         .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(createOrderRequest)))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isNotFound());
     }
 }
